# My-one-geode-mod

./: CMakeLists.txt  README.md  about.md  archont001.calculator-in-settings.android64.cpp  changelog.md  mod.json
.github/workflows/: build.yml
src/: main0.cpp
